[Hrushikesh] Added:integration testing on user,admin,token verification and login api
