# BookStore/src/routes/user.route.js
@@ -7,14 +7,16 @@ import { userRole, adminRole } from '../middlewares/role.middleware';
 
 const router = express.Router();
 
-/* Admin */
-router.post('/admin/registration', newUserValidator, adminRole, UserController.newUser);
-// router.post('/admin/login', loginValidator, UserController.login);
+/* User */
+router.post('/', newUserValidator, userRole, UserController.newUser);
 
 /* Verify Token */
 router.post('/verification', userAuth, UserController.registerUser);
 
-/* User */
-router.post('/registration', newUserValidator, userRole, UserController.newUser);
-// router.post('/login', loginValidator, UserController.login);
+/* Login */
+router.post('/login', loginValidator, UserController.login);
+
+/* Admin */
+router.post('/admin', newUserValidator, adminRole, UserController.newUser);
+
 export default router;
